card cutoff fix

--- a/less/categories.less
+++ b/less/categories.less
@@ -90,7 +90,7 @@
 			p {
 				font-size: 12px;
 				margin: 0;
-
+				line-height: 14px;
 				.emoji {
 					max-width: 12px;
 					max-height: 12px;
